--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,3 @@
-
+spring.data.mongodb.uri=mongodb+srv://ayushgupta11:5AMmze81NSD3EyBW@zero-hunger.sfiud.mongodb.net/test?retryWrites=true&w=majority
+spring.data.mongodb.database=pdsmanagement
+server.port= 8181
