--- a/pom.xml
+++ b/pom.xml
@@ -70,6 +70,7 @@
 							<artifactId>lombok</artifactId>
 						</exclude>
 					</excludes>
+					<finalName>pdsmanagement-app</finalName>
 				</configuration>
 			</plugin>
 		</plugins>
