--- a/k8s-pdsmanagement.yml
+++ b/k8s-pdsmanagement.yml
@@ -1,3 +1,15 @@
+apiVersion: v1
+kind: Service
+metadata: 
+    name: k8s-pdsmanagement-service
+spec:
+    selector:
+        app: k8s-pdsmanagement
+    ports:
+        - port: 8181
+          targetPort: 8181
+    type: LoadBalancer
+---
 apiVersion: apps/v1
 kind: Deployment
 metadata:
@@ -8,7 +20,7 @@ spec:
   selector:
     matchLabels:
       app: k8s-pdsmanagement
-  replicas: 1
+  replicas: 2
   template:
     metadata:
       labels:
