--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,3 +1,3 @@
-spring.data.mongodb.uri=mongodb+srv://ayushgupta11:5AMmze81NSD3EyBW@zero-hunger.sfiud.mongodb.net/test?retryWrites=true&w=majority
-spring.data.mongodb.database=pdsmanagement
+spring.data.mongodb.uri=PDSMANAGEMENT_DB_CONNECTION_STRING
+spring.data.mongodb.database=DATABASE_NAME
 server.port= ${PORT:8181}
