--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,3 +1,3 @@
-spring.data.mongodb.uri=PDSMANAGEMENT_DB_CONNECTION_STRING
-spring.data.mongodb.database=DATABASE_NAME
+spring.data.mongodb.uri=${{secrets.PDSMANAGEMENT_DB_CONNECTION_STRING}}
+spring.data.mongodb.database=${{secrets.DATABASE_NAME}}
 server.port= ${PORT:8181}
