--- a/k8s-pdsmanagement.yml
+++ b/k8s-pdsmanagement.yml
@@ -8,7 +8,7 @@ spec:
     ports:
         - port: 8181
           targetPort: 8181
-    type: LoadBalancer
+    type: NodePort
 ---
 apiVersion: apps/v1
 kind: Deployment
